--- a/index.html
+++ b/index.html
@@ -10,8 +10,13 @@
 
 <body>
     <h2>JavaScript API.</h2>
+    <ul id="users">
 
-    <script src="js/json.js"></script>
+    </ul>
+    <button onclick="loadData()">Load Data</button>
+    <button onclick="loadUser()">Load User</button>
+    <button onclick="loadPosts()">Load Posts</button>
+    <script src="js/api.js"></script>
 </body>
 
 </html>
